# dcl-core

./: .gitattributes  .gitignore  .gitmessage  CITATION.cff  CLAUDE.md  HOWTO_REPRODUCE.md  README.md  build.cmd  build.sh  common.mak  makefile  pyproject.toml  setup.cmd
.claude/agents/: api-stability-reviewer.md  physics-naming-reviewer.md
.dev-shell/: Dockerfile  requirements.txt
.github/workflows/: tests.yml
data/: README.md
docs/: README.md  data_deposit_and_provenance.md
docs/design/: 01_planck_of_probability.md  02_remainder_strategy.md  03_naming_convention.md  04_gauge_field_and_vacuum_response.md  05_interaction_engine.md
docs/reference/: api.md
docs/tutorials/: 01_first_session.md  02_choosing_N.md
experiments/: EXPERIMENTS.md  README.md  exp_00_hop_drift.md  exp_00_hop_drift.py  exp_01_throughput.py  exp_02_phase_profile.py  exp_03_prob_floor_diag.py  makefile
notes/: README.md  bresenham_residual_design.md  color_structure.md  example_note.md  gauge_field_v030_plan.md
notes/figures/: core3d-classes.md
release_notes/: README.md  TEMPLATE-release-message.md  TEMPLATE.md  v0.1.0-release-message.md  v0.1.0-zenodo-description.txt  v0.1.0.md  v0.2.0-release-message.md  v0.2.0-zenodo-description.txt  v0.2.0.md  v0.2.1-release-message.md  v0.2.1-zenodo-description.txt  v0.2.1.md  v0.2.2-release-message.md  v0.2.2-zenodo-description.txt  v0.2.2.md  zenodo_references.txt  zenodo_related_works.txt
src/dcl_core/: README.md  __init__.py  _version.py
src/dcl_core/core/: CausalSession.py  __init__.py
src/dcl_core/core3d/: __init__.py  clifford.py  gauge.py  hop.py  lattice.py  remainder.py  scheduler.py  session.py
src/dcl_core/core3d/backends/: __init__.py  cpu.py  gpu.py
tests/: conftest.py  test_cross_validation.py  test_peierls.py  test_prob_floor_a1_consistency.py  test_smoke.py
tests/core/: conftest.py  test_causal_session.py  test_composite_causal_session.py  test_octahedral_lattice.py  test_phase_oscillator.py  test_smoke.py  test_tick_scheduler.py  test_unity_constraint.py
tests/core3d/: test_clifford.py  test_conservation.py  test_continuum_limit.py  test_hop.py  test_lattice.py  test_remainder.py  test_scheduler.py
tools/: diff_baselines.py
