[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcl_core"
description = "Core library for the A=1 Discrete Causal Lattice framework"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Jack Menendez", email = "jack@geometryinducedphysics.org" },
]
requires-python = ">=3.11"
keywords = ["physics", "lattice", "discrete-causal-lattice", "research-software"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version"]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
# GPU backend: CuPy + a CUDA-capable card. Install only on a host
# where CUDA is available, otherwise the install will fail.
gpu = [
    "cupy-cuda12x>=12.0",
]
# Symbolic verification (used by tests/test_clifford.py etc.)
sympy = [
    "sympy>=1.12",
]
# Dev / test / lint tooling
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "mypy>=1.10",
    "hypothesis>=6.100",
    "sympy>=1.12",
]
# Documentation builders (optional -- pick one; mkdocs-material below)
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://geometryinducedphysics.org/"
Repository = "https://github.com/JackDMenendez/dcl-core"
Issues = "https://github.com/JackDMenendez/dcl-core/issues"
Documentation = "https://github.com/JackDMenendez/dcl-core/tree/main/docs"

# ---------------------------------------------------------------------------
# Build configuration
# ---------------------------------------------------------------------------

[tool.hatch.version]
path = "src/dcl_core/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dcl_core"]

[tool.hatch.build.targets.sdist]
include = [
    "src/dcl_core",
    "tests",
    "README.md",
    "LICENSE",
    "CITATION.cff",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require a CUDA-capable GPU",
    "sympy: marks tests that require sympy",
]

[tool.coverage.run]
source = ["src/dcl_core"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # comprehensions
    "PT",  # pytest style
    "NPY", # numpy-specific
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts are fine in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_configs = true
disallow_untyped_decorators = false
# Numpy / scipy / cupy stubs vary by version; keep strictness pragmatic
[[tool.mypy.overrides]]
module = ["cupy.*", "cupyx.*"]
ignore_missing_imports = true
